release 2.6.5